<resources>
    <string name="app_name">BlogAir</string>
    <string name="welcome_to_blog_air">Welcome to Blog Air</string>
    <string name="share_your_masterpiece">Share your masterpiece</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="desc">desc</string>
    <string name="default_like_count">0</string>
    <string name="full_name">Full Name</string>
    <string name="like_icon">like_icon</string>
    <string name="post_image">post_image</string>
    <string name="default_user_icon">default_user_icon</string>
    <string name="dots">dots</string>
    <string name="comments">comments</string>
    <string name="username">Username</string>
    <string name="sample_post_desc">This is sample post description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="more"><b><u>...more</u></b></string>
    <string name="less"><b><u>...less</u></b></string>
    <string name="title_activity_single_post">SinglePost</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
