<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/home_row_thumb_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/default_user_icon"
        android:padding="5dp"
        android:src="@drawable/default_user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homerow_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/full_name"
        android:maxLines="2"
        android:textSize="15sp"
        android:textColor="#000000"
        app:layout_constraintRight_toLeftOf="@id/homerow_dots_menu"
        app:layout_constraintTop_toTopOf="@id/home_row_thumb_icon"
        app:layout_constraintLeft_toRightOf="@id/home_row_thumb_icon"
       />

    <TextView
        android:id="@+id/homerow_timestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Time Stamp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/homerow_full_name"
        app:layout_constraintLeft_toRightOf="@id/home_row_thumb_icon"
        app:layout_constraintRight_toLeftOf="@id/homerow_dots_menu"
    />


    <ImageView
        android:id="@+id/homerow_dots_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/dots"
        android:padding="5dp"
        android:src="@drawable/dots_menu_icon"
        app:layout_constraintBottom_toTopOf="@id/home_row_thumb_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_row_thumb_icon" />

    <ImageView
        android:id="@+id/homerow_post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/post_image"
        android:scaleType="fitCenter"
        android:src="@drawable/default_post_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_row_thumb_icon" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homerow_likeicon_layout"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homerow_post_image">

        <ImageView
            android:id="@+id/homerow_like_icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/like_icon"
            android:padding="5dp"
            android:visibility="gone"
            android:src="@drawable/like_unselected_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/homerow_likeselesctedicon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:padding="5dp"
            android:tint="#E91E63"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/like_selected_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/homerow_comments_icon"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/comments"
        android:padding="5dp"
        android:src="@drawable/comments_tv"
        app:layout_constraintBottom_toTopOf="@id/homerow_likeicon_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homerow_likeicon_layout" />

    <TextView
        android:id="@+id/homerow_postheading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:text="Post Heading"
        android:maxLines="2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homerow_comments_icon" />

    <TextView
        android:id="@+id/homerow_post_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:maxLines="4"
        android:textColor="#000000"
        android:text="@string/sample_post_desc"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homerow_postheading" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/homerow_post_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/homerow_moretv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/more"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#000000"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/homerow_lesstv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/less"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#000000"
            android:layout_marginStart="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/homerow_bookmarkunselected"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toTopOf="@+id/homerow_postheading"
        app:layout_constraintEnd_toStartOf="@+id/homerow_comments_icon"
        app:layout_constraintTop_toBottomOf="@+id/homerow_post_image"
        app:srcCompat="@drawable/bookmark_unselected_icon"
        android:padding="5dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/homerow_bookmarkselected"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/homerow_postheading"
        app:layout_constraintEnd_toStartOf="@+id/homerow_comments_icon"
        app:layout_constraintTop_toBottomOf="@+id/homerow_post_image"
        app:srcCompat="@drawable/bookmark_selected_icon"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>